test/errors/error1.sp
%Sort is defined more than once.
sorts
#s={a}.
#s={b}.
predicates
rules
